--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -19,6 +19,14 @@
         th {
             background-color: #f2f2f2;
         }
+        .button-bar {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .button-bar a {
+            display: inline-block;
+            margin-right: 10px;
+        }
     </style>
     <script>
         setTimeout(function(){
@@ -28,7 +36,11 @@
 </head>
 <body>
     <h1>Persistent Networks Data</h1>
-    <a href="/download">Download JSON</a>
+    <div class="button-bar">
+        <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('logs') }}">View Logs</a>
+        <a href="{{ url_for('download') }}">Download JSON</a>
+    </div>
     <table>
         <thead>
             <tr>
