Add spectrum page

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -35,12 +35,13 @@
     </script>
 </head>
 <body>
-    <h1>Persistent Networks Data</h1>
     <div class="button-bar">
         <a href="{{ url_for('index') }}">Home</a>
         <a href="{{ url_for('logs') }}">View Logs</a>
+        <a href="{{ url_for('spectrum') }}">View Spectrum</a>
         <a href="{{ url_for('download') }}">Download JSON</a>
     </div>
+    <h1>Persistent Networks Data</h1>
     <table>
         <thead>
             <tr>
