--- a/frontend/templates/logs.html
+++ b/frontend/templates/logs.html
@@ -25,6 +25,7 @@
     <div class="button-bar">
         <a href="{{ url_for('index') }}">Home</a>
         <a href="{{ url_for('logs') }}">View Logs</a>
+        <a href="{{ url_for('spectrum') }}">View Spectrum</a>
         <a href="{{ url_for('download') }}">Download JSON</a>
     </div>
 
